

  This is list of recent PETSc changes before they are 
transported into the docs/changes.html file. (Because it
is a pain to always check that file out of SourceSafe to 
add to it).

  VEC


  MAT
   - MatSNESMFFormJacobian() has been renamed to MatSNESMFComputeJacobian().
added another field to MatLUInfo and MatILUInfo

   
  KSP

  DA
   - DAGetColoring() has a different calling sequence; now use this in conjunction 
     with the new routine DAGetMatrix().


  SLES
 

  PC



 added -pc_lu_zeropivot and -pc_ilu_zeropivot (still need function interfaces)

  
 
  AO

    

  IS

   

  PF
      

  Draw
  

  General





   

  
  Viewers


  PLog

  


  SNES 

  

  DA

  

  TS

   
